# Paylink

./: .env.example  BENCHMARK.md  CLIENT_PROPOSAL.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  README.md  TEST_RESULTS.md  TUTORIAL.md  go.mod
.github/workflows/: ci.yml
cmd/server/: main.go
cmd/worker/: main.go
crypto_cpp/: CMakeLists.txt  paycrypto.cpp  paycrypto.h
docs/: api.yaml  architecture.md  error_handling.md  examples.md  postman_collection.json  security.md
infra/: Dockerfile.server  Dockerfile.test  Dockerfile.worker  docker-compose.yml
internal/adapters/: interface.go  registry.go
internal/adapters/midtrans/: midtrans.go  midtrans_test.go
internal/adapters/xendit/: xendit.go  xendit_test.go
internal/api/: handler.go  handler_test.go
internal/config/: config.go
internal/crypto/: crypto.go  crypto_test.go  wrapper.go
internal/db/: db.go
internal/jobs/: queue.go
internal/metrics/: metrics.go
internal/models/: transaction.go
internal/util/: logger.go
migrations/: 001_initial_schema.sql
scripts/: setup.sh
